      over the generated code.
    - The compiler now supports a ``computedGoto`` pragma to support very fast
      dispatching for interpreters and the like.
    - The old evaluation engine has been replaced by a proper register based
      virtual machine. This fixes numerous bugs for ``nimrod i`` and for macro
      evaluation.
    - ``--gc:none`` produces warnings when code uses the GC.


    Language Additions
    ------------------

    - Arrays can now be declared with a single integer literal ``N`` instead of a
      range; the range is then ``0..N-1``.
    - Added ``requiresInit`` pragma to enforce explicit initialization.
    - Exported templates are allowed to access hidden fields.
    - The ``using statement`` enables you to more easily author domain-specific
      languages and libraries providing OOP-like syntactic sugar.
    - Added the possibility to override various dot operators in order to handle
      calls to missing procs and reads from undeclared fields at compile-time.
    - The overload resolution now supports ``static[T]`` params that must be
      evaluable at compile-time.
    - Support for user-defined type classes has been added.
    - The *command syntax* is supported in a lot more contexts.
    - Anonymous iterators are now supported and iterators can capture variables
      of an outer proc.


    Tools improvements
    ------------------

    - c2nim can deal with a subset of C++. Use the ``--cpp`` command line option
      to activate.


2014-02-11 Nimrod Featured in Dr. Dobb's Journal
================================================

Nimrod has been `featured<http://www.drdobbs.com/open-source/nimrod-a-new-systems-programming-languag/240165321>`_
as the cover story in the February 2014 issue of Dr. Dobb's Journal.


2014-01-15 Andreas Rumpf's talk on Nimrod at Strange Loop 2013 is now online
============================================================================
